# SPCE

./: CMakeLists.txt  README.md  message (1).txt  message.txt
assets/UI/soccer_ui/: Thumbs.db
assets/textures/Penzilla Protagonist/CharacterSheets/: readme.txt
assets/textures/Penzilla Protagonist/PantSheets/: readme.txt
docs/: README.txt
src/: Test.h  main.cpp
src/Common/: Constants.h  Packets.h  Types.h
src/Core/: GameEngine.cpp  GameEngine.h  Renderer.cpp  Renderer.h
src/Input/: AIController.cpp  AIController.h  AiController.h  InputHandler.cpp  InputHandler.h  MenuInputHandler.cpp  MenuInputHandler.h
src/Network/: NetworkManager.cpp  NetworkManager.h
src/Objects/: Ball.cpp  Ball.h  Goal.cpp  Goal.h  Player.cpp  Player.h
src/Simulation/: Match.cpp  Match.h  PhysicsEngine.cpp  PhysicsEngine.h  World.cpp  World.h
src/States/: EngineState.cpp  EngineState.h  EngineStates.h  MatchStates.cpp  MatchStates.h
tests/: Test.h
